# takeonme

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: add_resource.md  custom.md
.github/workflows/: publish.yml  test.yml
example_service/: commands.py
takeonme/: cli.py  dns_util.py  util.py
takeonme/aws/: commands.py  ec2.py  route53.py
takeonme/gcp/: cloud_dns.py  commands.py
