[tool.poetry]
name = "takeonme"
version = "0.3.0"
description = "Enumerate resources vulnerable to takeover"
authors = ["SecOps <secops+takeonme@mozilla.com>"]
license = "MPL-2"

[tool.poetry.scripts]
takeonme = "takeonme.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.16.55"
google-api-python-client = "^1.12.8"
click = "7.1.2"
google-auth = "^1.24.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.1"
mypy = "^0.790"
coverage = "^5.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--doctest-modules"
testpaths = [
  "takeonme",
]
